Actions
Bug #14072
closedpicl: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error on SPARC:
psvcplugin.c: In function 'thread_setup': psvcplugin.c:554:45: error: cast between incompatible function types from 'void (*)(EInterval_t *)' {aka 'void (*)(struct interval_info *)'} to 'void * (*)()' [-Werror=cast-function-type] 554 | status = pthread_create(&ip->thread, NULL, (void *(*)())run_policies, | ^ cc1: all warnings being treated as errors
Fix function signature.
Testing done: build/install/boot.
Updated by Electric Monk 8 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit afe82bdcea10db1bde6221f8e9322146b418270d
commit afe82bdcea10db1bde6221f8e9322146b418270d Author: Toomas Soome <tsoome@me.com> Date: 2021-09-17T16:18:35.000Z 14072 picl: cast between incompatible function types Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions