14072 picl: cast between incompatible function types Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>